--- a/Dashboard.html
+++ b/Dashboard.html
@@ -118,6 +118,36 @@
           </div>
         </div>
 
+        <!-- Influencer card & Manager info -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="bg-[#111] p-6 rounded-2xl border border-white/5">
+            <p class="text-gray-500 text-xs uppercase tracking-widest mb-2 font-bold">Influencer</p>
+            <h3 id="influencerName" class="text-lg font-semibold">—</h3>
+            <p id="influencerEmailSmall" class="text-sm text-gray-400 mt-1">—</p>
+            <p class="text-xs text-gray-400 mt-3">Referral Code</p>
+            <p id="influencerRef" class="font-mono text-sm">—</p>
+            <p class="text-xs text-gray-400 mt-3">Phone</p>
+            <p id="influencerPhone" class="text-sm">—</p>
+          </div>
+
+          <div class="bg-[#111] p-6 rounded-2xl border border-white/5">
+            <p class="text-gray-500 text-xs uppercase tracking-widest mb-2 font-bold">Manager (based on referral)</p>
+            <h3 id="managerName" class="text-lg font-semibold">—</h3>
+            <p id="managerContact" class="text-sm text-gray-400 mt-1">—</p>
+            <p class="text-xs text-gray-400 mt-3">Manager Note</p>
+            <p id="managerNote" class="text-sm text-gray-300 mt-1">Manager info is determined by your referral code.</p>
+          </div>
+
+          <div class="bg-[#111] p-6 rounded-2xl border border-white/5">
+            <p class="text-gray-500 text-xs uppercase tracking-widest mb-2 font-bold">Quick Actions</p>
+            <div class="flex flex-col gap-2 mt-2">
+              <button id="editProfileBtn" class="bg-white text-black px-3 py-2 rounded text-sm font-semibold">Edit Profile</button>
+              <button id="viewPaymentsBtn" class="bg-white/5 border border-white/10 text-white px-3 py-2 rounded text-sm">View Payments</button>
+              <button id="contactManagerBtn" class="bg-blue-600 text-white px-3 py-2 rounded text-sm">Contact Manager</button>
+            </div>
+          </div>
+        </div>
+
         <div>
           <div class="flex justify-between items-end mb-4">
             <h3 class="text-xl font-bold">Joined Campaigns</h3>
@@ -322,6 +352,56 @@
     });
     document.addEventListener("keydown", (e) => { if (e.key === "Escape") closeDescriptionModal(); });
 
+    /** Fetch manager info by referral code (best-effort) **/
+    async function fetchManagerByReferral(code) {
+      if (!code || code === "N/A") {
+        setManagerUI(null);
+        return;
+      }
+
+      try {
+        // Best-effort: try a GET endpoint with query param. If your backend exposes a different API,
+        // adapt this endpoint accordingly.
+        const res = await fetch(`${API_BASE}/influencer/manager?ref=${encodeURIComponent(code)}`, {
+          method: "GET",
+          headers: { "Content-Type": "application/json", "Authorization": `Bearer ${localStorage.getItem(STORAGE_KEY)}` }
+        });
+
+        if (!res.ok) {
+          // no manager endpoint or not found -> fallback to N/A
+          setManagerUI(null);
+          return;
+        }
+
+        const payload = await res.json();
+        // payload may be { success:true, data: { manager_name, manager_contact } }
+        const data = payload.data ?? payload.manager ?? payload;
+        const managerName = data.manager_name ?? data.name ?? data.manager ?? null;
+        const managerContact = data.manager_contact ?? data.contact ?? data.phone ?? data.manager_phone ?? null;
+        setManagerUI({ managerName, managerContact });
+      } catch (err) {
+        console.warn("fetchManagerByReferral failed:", err);
+        setManagerUI(null);
+      }
+    }
+
+    function setManagerUI(manager) {
+      const nameEl = document.getElementById("managerName");
+      const contactEl = document.getElementById("managerContact");
+      const noteEl = document.getElementById("managerNote");
+
+      if (!manager || (!manager.managerName && !manager.managerContact)) {
+        nameEl.textContent = "N/A";
+        contactEl.textContent = "N/A";
+        noteEl.textContent = "Manager information not available for this referral code.";
+        return;
+      }
+
+      nameEl.textContent = manager.managerName ?? "—";
+      contactEl.textContent = manager.managerContact ?? "—";
+      noteEl.textContent = "Contact your manager for campaign support.";
+    }
+
     /** Load profile + summary stats **/
     async function loadProfileAndStats() {
       const token = localStorage.getItem(STORAGE_KEY);
@@ -348,6 +428,10 @@
         const clicks = Number(data.clicks ?? data.total_clicks ?? 0);
         const conversions = Number(data.conversions ?? data.total_conversions ?? 0);
 
+        // additional influencer attributes (best-effort)
+        const name = data.name ?? data.user?.name ?? data.full_name ?? "—";
+        const phone = data.phone ?? data.user?.phone ?? data.mobile ?? "—";
+
         document.getElementById("userIdBox").innerText = idVal ? String(idVal) : "--";
         document.getElementById("profileEmail").innerText = email || "—";
         document.getElementById("generatedCode").innerText = code ? escapeHtml(code) : "N/A";
@@ -356,6 +440,15 @@
         document.getElementById("clicks").innerText = String(clicks);
         document.getElementById("conversions").innerText = String(conversions);
         document.getElementById("earnings").innerText = `₹${(conversions * 100).toLocaleString()}`;
+
+        // populate influencer card
+        document.getElementById("influencerName").textContent = name;
+        document.getElementById("influencerEmailSmall").textContent = email || "—";
+        document.getElementById("influencerRef").textContent = code ? code : "N/A";
+        document.getElementById("influencerPhone").textContent = phone || "—";
+
+        // fetch manager info (best-effort)
+        await fetchManagerByReferral(code);
 
       } catch (err) {
         console.error("Profile/Dashboard error:", err);
